Added the iOS Splash Screen, updated the android app display name to At-Tawheed.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.almarfa.tawheed">
    <application
-        android:label="tawheed"
+        android:label="At-Tawheed"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
