--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_analytics: ^7.1.1
+  firebase_core: ^1.0.1
+  firebase_database: ^6.1.0
   url_launcher: ^6.0.2
-cupertino_icons: ^1.0.2
-english_words: ^3.1.5
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
