--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_database: ^6.1.0
   url_launcher: ^6.0.2
   cupertino_icons: ^1.0.2
+  share: 0.6.5+4
 
 dev_dependencies:
   flutter_test:
