--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: myapp
-description: A new Flutter application.
+description: Sharah Kitaab al-Tawheed.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,25 +18,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+2
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_analytics: ^7.1.1
-  firebase_core: ^1.0.1
-  firebase_database: ^6.1.0
+  firebase_analytics: ^9.1.2
+  firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
   url_launcher: ^6.0.2
   cupertino_icons: ^1.0.2
-  share: 0.6.5+4
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  change_app_package_name: ^0.1.2
+  change_app_package_name: ^1.0.0
 
   http: ^0.13.0
-  youtube_player_flutter: ^7.0.0+7
+  youtube_player_flutter: ^8.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
