--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.almarfa.tawheed">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="At-Tawheed"
         android:icon="@mipmap/ic_launcher">
