--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.1+5
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -28,7 +28,7 @@ dependencies:
   firebase_database: ^10.2.4
   url_launcher: ^6.1.12
   cupertino_icons: ^1.0.5
-  share: ^2.0.4
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +36,7 @@ dev_dependencies:
   change_app_package_name: ^1.0.0
 
   http: ^1.1.0
-  youtube_player_flutter: ^8.0.0
+  youtube_player_flutter: ^9.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
