--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,25 +18,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.1+5
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_analytics: ^10.4.4
-  firebase_core: ^2.15.0
-  firebase_database: ^10.2.4
-  url_launcher: ^6.1.12
-  cupertino_icons: ^1.0.5
-  share: ^2.0.4
+  firebase_analytics: ^12.1.2
+  firebase_core: ^4.4.0
+  firebase_database: ^12.1.3
+  url_launcher: ^6.3.0
+  cupertino_icons: ^1.0.8
+  share_plus: ^12.0.1
+  flutter_inappwebview: ^6.0.0
+  youtube_player_flutter: ^9.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^6.0.0
   change_app_package_name: ^1.0.0
-
-  http: ^1.1.0
-  youtube_player_flutter: ^8.0.0
+  http: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
