Flutter 3.41 migration, Gradle 8.11 upgrade, Kotlin fix, url_launcher modernisation

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=1g -Dkotlin.daemon.jvm.options=-Xmx3g
 android.useAndroidX=true
 android.enableJetifier=true
-android.bundle.enableUncompressedNativeLibs=false
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+kotlin.incremental=true
