--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,18 +26,18 @@ dependencies:
   firebase_analytics: ^12.1.2
   firebase_core: ^4.4.0
   firebase_database: ^12.1.3
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
   cupertino_icons: ^1.0.8
   share_plus: ^12.0.1
   flutter_inappwebview: ^6.0.0
   youtube_player_flutter: ^9.1.3
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
   change_app_package_name: ^1.0.0
-  http: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,3 +76,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+dependency_overrides:
+  url_launcher_android: ^6.3.28
+  url_launcher_ios: ^6.3.1
