Update the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@
 *.iws
 .idea/
 
+android/build/
+android/.gradle/
+ios/Flutter/ephemeral/
+*.pem
+
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
