--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   youtube_player_flutter: ^9.1.3
   http: ^1.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
